Fix crash in Print Preview on rotating the preview in 'Clockwise' direction..

BUG=662305

Review-Url: https://codereview.chromium.org/2482533003
Cr-Commit-Position: refs/heads/master@{#430123}

Former-commit-id: b2673f9d15761c1e6e7c73d33079391df5911016